--- a/ansible/roles/haproxy/defaults/main.yml
+++ b/ansible/roles/haproxy/defaults/main.yml
@@ -3,3 +3,12 @@
 haproxy_stats_port: 7000
 haproxy_postgres_primary_port: 5000
 haproxy_postgres_replica_port: 5001
+
+# Patroni backend servers
+# Format: list of dicts with 'name' and 'ip' keys
+# Example:
+#   patroni_backends:
+#     - { name: "patroni-node1", ip: "192.168.20.61" }
+#     - { name: "patroni-node2", ip: "192.168.20.62" }
+#     - { name: "patroni-node3", ip: "192.168.20.63" }
+patroni_backends: []
