debug: add ansible_extra_vars tracking

--- a/.github/workflows/reusable-provision.yml
+++ b/.github/workflows/reusable-provision.yml
@@ -707,6 +707,9 @@ jobs:
           if [ -n "${{ inputs.ansible_extra_vars }}" ]; then
             echo "✓ Additional Ansible extra vars provided"
             echo "DEBUG: ansible_extra_vars = ${{ inputs.ansible_extra_vars }}"
+            echo "DEBUG: Length = ${#{{ inputs.ansible_extra_vars }}}"
+          else
+            echo "⚠️  No ansible_extra_vars provided"
           fi
           
           # Run Ansible playbook
@@ -748,6 +751,7 @@ jobs:
           else
             # Single-instance: pass single hostname
             if [ -n "${{ inputs.ansible_extra_vars }}" ]; then
+              echo "DEBUG: Running ansible-playbook with extra vars: ${{ inputs.ansible_extra_vars }}"
               TS_AUTHKEY="$TS_AUTHKEY" ansible-playbook -i "$INVENTORY" site.yml \
                 --user $ANSIBLE_USER \
                 $BECOME_FLAG \
