Set default value for tailscale_tags input

--- a/.github/workflows/reusable-destroy.yml
+++ b/.github/workflows/reusable-destroy.yml
@@ -149,7 +149,7 @@ jobs:
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_CLIENT_SECRET }}
-          tags: ${{ inputs.tailscale_tags }}
+          tags: ${{ inputs.tailscale_tags || 'tag:ci' }}
 
       - name: Validate inputs
         run: |
