--- a/.github/workflows/reusable-destroy.yml
+++ b/.github/workflows/reusable-destroy.yml
@@ -142,10 +142,22 @@ jobs:
       github.event.pull_request.head.repo.full_name == github.repository
     
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Debug Tailscale secrets presence
+        run: |
+          if [ -z "${{ secrets.TS_OAUTH_CLIENT_ID }}" ]; then
+            echo "::error::TS_OAUTH_CLIENT_ID is empty"
+            exit 1
+          fi
+          if [ -z "${{ secrets.TS_OAUTH_CLIENT_SECRET }}" ]; then
+            echo "::error::TS_OAUTH_CLIENT_SECRET is empty"
+            exit 1
+          fi
       # Connect to Tailscale for GitHub-hosted runners
       - name: Connect to Tailscale
         if: needs.check-runner-access.outputs.runner == 'ubuntu-latest'
-        uses: tailscale/github-action@53acf823325fe9ca47f4cdaa951f90b4b0de5bb9 # v4
+        uses: tailscale/github-action@v4 # v4
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_CLIENT_SECRET }}
