--- a/.github/workflows/reusable-destroy.yml
+++ b/.github/workflows/reusable-destroy.yml
@@ -146,6 +146,8 @@ jobs:
 
       - name: Debug Tailscale secrets presence
         run: |
+          echo "ID='${{ secrets.TS_OAUTH_CLIENT_ID }}'"
+          echo "SECRET set? ${{ secrets.TS_OAUTH_CLIENT_SECRET != '' }}"
           if [ -z "${{ secrets.TS_OAUTH_CLIENT_ID }}" ]; then
             echo "::error::TS_OAUTH_CLIENT_ID is empty"
             exit 1
@@ -154,6 +156,7 @@ jobs:
             echo "::error::TS_OAUTH_CLIENT_SECRET is empty"
             exit 1
           fi
+
       # Connect to Tailscale for GitHub-hosted runners
       - name: Connect to Tailscale
         if: needs.check-runner-access.outputs.runner == 'ubuntu-latest'
