fix not equal operator-3

--- a/.github/workflows/reusable-destroy.yml
+++ b/.github/workflows/reusable-destroy.yml
@@ -249,7 +249,7 @@ jobs:
           echo "🔍 Debug: Runner OS: ${{ runner.os }}"
           echo "🔍 Debug: Runner name: ${{ runner.name }}"
 
-        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269571cb # v3.1.2
+        uses: hashicorp/setup-terraform@v3 # v3.1.2
         with:
           terraform_wrapper: false
 
