--- a/.github/workflows/reusable-provision.yml
+++ b/.github/workflows/reusable-provision.yml
@@ -214,6 +214,20 @@ jobs:
       github.event.pull_request.head.repo.full_name == github.repository
     
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Debug Tailscale secrets presence
+        run: |
+          echo "ID='${{ secrets.TS_OAUTH_CLIENT_ID }}'"
+          echo "SECRET set? ${{ secrets.TS_OAUTH_CLIENT_SECRET != '' }}"
+          if [ -z "${{ secrets.TS_OAUTH_CLIENT_ID }}" ]; then
+            echo "::error::TS_OAUTH_CLIENT_ID is empty"
+            exit 1
+          fi
+          if [ -z "${{ secrets.TS_OAUTH_CLIENT_SECRET }}" ]; then
+            echo "::error::TS_OAUTH_CLIENT_SECRET is empty"
+            exit 1
+          fi      
       # Connect to Tailscale for GitHub-hosted runners
       - name: Connect to Tailscale
         if: needs.check-runner-access.outputs.runner == 'ubuntu-latest'
