--- a/.github/workflows/reusable-provision.yml
+++ b/.github/workflows/reusable-provision.yml
@@ -163,10 +163,17 @@ jobs:
             let runner = 'ubuntu-latest';
             
             // SECURITY: Block external callers from using self-hosted runners
-            // This protects against old commit SHA references
-            if (context.repo.owner != 'KoraMaple' || context.repo.repo != 'nante-workflow-caller') {
+            // For reusable workflows, check the calling repository owner
+            const callingRepo = context.payload.repository?.full_name || '';
+            const callingOwner = callingRepo.split('/')[0];
+            
+            core.info(`Calling repository: ${callingRepo}`);
+            core.info(`Calling owner: ${callingOwner}`);
+            
+            // Only allow KoraMaple org repositories to use self-hosted runners
+            if (callingOwner !== 'KoraMaple') {
               core.warning('⚠️ External workflow call detected - forcing github-hosted runner for security');
-              core.warning(`Called from: ${context.repo.owner}/${context.repo.repo}`);
+              core.warning(`Called from: ${callingRepo}`);
               core.setOutput('runner', 'ubuntu-latest');
               return;
             }
@@ -217,6 +224,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Debug Tailscale secrets presence
+        if: needs.check-runner-access.outputs.runner == 'ubuntu-latest'
         run: |
           echo "ID='${{ secrets.TS_OAUTH_CLIENT_ID }}'"
           echo "SECRET set? ${{ secrets.TS_OAUTH_CLIENT_SECRET != '' }}"
